# MCPPyTestImplementation

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_server.sh  server.py  test_server.py  verify_setup.py
src/: __init__.py  calculator_app.py
tests/: __init__.py  test_calculator.py
