[project]
name = "pytest-mcp-server"
version = "0.1.0"
description = "MCP server for running pytest tests on desktop applications"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pytest>=7.0.0",
    "pytest-json-report>=1.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
pytest-mcp-server = "server:main"
calculator-app = "src.calculator_app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "ui: marks tests as UI tests (deselect with '-m \"not ui\"')",
    "error_handling: marks tests that check error handling",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
